--- a/LTW_Week4/src/main/resources/application.properties
+++ b/LTW_Week4/src/main/resources/application.properties
@@ -12,11 +12,12 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.port=8066
 
-spring.mvc.view.prefix=/WEB-INF/views/
-
+#spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.prefix=classpath:/templates/
 
 spring.mvc.view.suffix=.jsp
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
+spring.thymeleaf.cache=false
